src/app/(site)/globals.css
@import 'tailwindcss';

:root {
	--primary: #2563eb;
	--secondary: #f8fafc;
	--tertiary: #1e293b;
	--accent-1: #cbd5e1;
	--accent-focus: #ff6e1f;
}

@theme inline {
	--color-primary: var(--primary);
	--color-secondary: var(--secondary);
	--color-tertiary: var(--tertiary);
	--color-accent-1: var(--accent-1);
	--color-accent-2: var(--accent-2);
	--color-accent-3: var(--accent-3);
	--color-accent-focus: var(--accent-focus);
	--color-text-dark: var(--primary);
	--color-text-light: var(--secondary);

	--font-primary: var(--font-primary);
	--font-secondary: var(--font-work-sans);

	--text-display-large: 100px;
	--text-display-medium: 70px;
	--text-display-small: 40px;
	--text-headline-large: 40px;
	--text-headline-medium: 40px;
	--text-headline-small: 28px;
	--text-title-large: 32px;
	--text-title-medium: 25px;
	--text-title-small: 20px;
	--text-subtitle-large: 18px;
	--text-subtitle-medium: 25px;
	--text-subtitle-small: 20px;
	--text-navlink-large: 20px;
	--text-navlink-medium: 20px;
	--text-navlink-small: 18px;
	--text-body-large: 24px;
	--text-body-medium: 22px;
	--text-body-small: 20px;
	--text-label-large: 16px;
	--text-label-medium: 14px;
	--text-label-small: 12px;

	--max-width-desktop: 2200px;

	--breakpoint-3xl: 120rem;

	/* Heights based on Tailwind's spacing scale: --spacing: 0.25rem /* 4px */
	--height-header-desktop: calc(var(--spacing) * 51) /* [51] 12.75rem = 204px */;
	--height-header-tablet: calc(var(--spacing) * 48) /* [48] 12rem = 192px */;
	--height-header-mobile: calc(var(--spacing) * 36) /* [36] 9rem = 144px */;
	--height-content: calc(100svh - var(--height-header-desktop));
}

@layer base {
	*,
	*::before,
	*::after {
		box-sizing: border-box;
	}

	* {
		margin: 0;
		padding: 0;
	}

	/* SCROLLBAR STYLES */
	* {
		scrollbar-width: thin;
		scrollbar-color: var(--primary) var(--secondary);
	}

	/* Chrome, Edge, and Safari */
	*::-webkit-scrollbar {
		width: 12px;
	}

	*::-webkit-scrollbar-track {
		background: var(--secondary);
	}

	*::-webkit-scrollbar-thumb {
		background-color: var(--secondary);
	}

	button {
		@apply cursor-pointer;
	}

	/* FOCUS STYLES */
	:focus-visible {
		@apply outline-none ring-4 ring-accent-focus;
	}

	/* LINK STYLES */
	.underlined-link {
		@apply relative inline-block w-fit cursor-pointer overflow-x-clip text-inherit no-underline;
	}

	.underlined-link::after {
		@apply absolute bottom-0.5 left-0 z-50 h-0.5 w-full -translate-x-[102%] bg-current transition-transform duration-300 content-[''];
	}

	.underlined-link:hover::after,
	.active.underlined-link::after {
		@apply translate-x-0;
	}

	/* BUTTON STYLES */

	button {
		@apply cursor-pointer;
	}

	.btn {
		@apply rounded-3xl px-4 py-3 leading-none font-medium transition-colors duration-300 flex items-center justify-center gap-2 focus:ring-2 focus:ring-accent-focus focus:ring-offset-2 disabled:opacity-50;
	}

	.btn-primary {
		@apply bg-primary text-secondary hover:bg-accent-1;
	}

	.btn-secondary {
		@apply bg-secondary text-primary hover:bg-accent-1;
	}

	.btn-accent-1 {
		@apply bg-accent-1 text-secondary hover:bg-accent-1;
	}

	.btn-ghost-secondary {
		@apply border border-secondary bg-transparent text-secondary hover:bg-tertiary w-fit;
	}

	.btn-ghost-tertiary {
		@apply border border-tertiary bg-transparent text-tertiary hover:bg-tertiary hover:text-secondary w-fit;
	}

	/* PILL STYLES */
	.pill {
		@apply rounded-full px-4 py-2 leading-none font-normal text-lg bg-accent-1 w-fit;
	}

	/* HEADING STYLES */
	.heading-display {
		@apply font-primary text-display-small font-thin sm:text-display-medium md:text-display-large leading-none;
	}

	.heading-headline {
		@apply font-primary text-headline-small leading-[1.1] font-thin sm:text-headline-medium xl:text-headline-large;
	}

	.heading-title {
		@apply font-primary text-title-small font-normal sm:text-title-medium xl:text-title-large text-pretty;
	}

	.heading-subtitle {
		@apply text-subtitle-large font-medium text-pretty;
	}

	/* TEXT STYLES */
	.text-body {
		@apply text-body-small md:text-body-medium lg:text-body-large font-light;
	}

	.text-paragraph {
		@apply text-body-small md:text-body-medium max-w-prose text-pretty lg:text-body-large;
	}

	.text-label {
		@apply text-label-small md:text-label-medium lg:text-label-large leading-5;
	}

	/* NAVLINK STYLES */
	.text-link-lg {
		@apply text-navlink-small md:text-navlink-medium lg:text-navlink-large leading-6;
	}

	.custom-rich-text p {
		@apply text-body-small md:text-body-medium lg:text-body-large mb-6 font-normal;
	}

	.custom-rich-text p:last-of-type {
		@apply mb-0;
	}

	.custom-rich-text h2,
	.custom-rich-text h3 {
		@apply text-subtitle-large font-normal;
	}

	.custom-rich-text a {
		@apply font-normal;
	}

	.custom-rich-text ul {
		@apply list-disc ml-6 mb-6 text-body-small md:text-body-medium lg:text-body-large font-normal;
	}

	/* ANIMATIONS */
	.form-input {
		@apply px-3 py-2 border border-secondary rounded-lg focus:outline-none focus:ring-2 focus:ring-accent-focus focus:border-accent-focus disabled:opacity-50 disabled:cursor-not-allowed;
	}

	/* UTILITIES */
	.custom-container {
		@apply w-full mx-auto max-w-desktop;
	}

	.gutter-stable {
		@media (min-width: 1428px) {
			scrollbar-gutter: stable;
		}
	}

	.gutter-auto {
		scrollbar-gutter: auto;
	}

	.spinner {
		@apply w-4 h-4 border-2 border-secondary border-t-transparent rounded-full animate-spin;
	}

	.header-line {
		@apply absolute h-0.5 bg-secondary w-full top-[77px] sm:top-[108px] md:top-[134px];
	}
}

